--- a/Pipfile
+++ b/Pipfile
@@ -6,23 +6,22 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-python-telegram-bot = "==13.10"
-telegramclient = "*"
-cachetools = "==4.2.2"
-certifi = "==2021.10.8"
-pyaes = "==1.6.1"
-pyasn1 = "==0.4.8"
-pytz = "==2021.3"
-pytz-deprecation-shim = "==0.1.0.post0"
-rsa = "==4.8"
-six = "==1.16.0"
-tornado = "==6.1"
-tzdata = "==2021.5"
-tzlocal = "==4.1"
-APScheduler = "==3.6.3"
+python-telegram-bot = "*"
+telethon = "*"
+cachetools = "*"
+certifi = "*"
+pyaes = "*"
+pyasn1 = "*"
+pytz = "*"
+pytz-deprecation-shim = "*"
+rsa = "*"
+six = "*"
+tornado = "*"
+tzdata = "*"
+tzlocal = "*"
+apscheduler = "*"
 ffmpeg = "*"
-Telethon = "==1.24.0"
-"backports.zoneinfo" = "==0.2.1"
+backports-zoneinfo = "*"
 
 [requires]
 python_version = "3.8"
