--- a/Pipfile
+++ b/Pipfile
@@ -6,24 +6,29 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-python-telegram-bot = "*"
-telethon = "*"
-cachetools = "*"
-certifi = "*"
-pyaes = "*"
-pyasn1 = "*"
-pytz = "*"
-pytz-deprecation-shim = "*"
-rsa = "*"
-six = "*"
-tornado = "*"
-tzdata = "*"
-tzlocal = "*"
-apscheduler = "*"
-ffmpeg = "*"
-backports-zoneinfo = "*"
-jikanpy = "*"
-pymongo = "*"
+python-telegram-bot = ">=20.7,<23.0"
+telethon = ">=1.40.0"
+pymongo = ">=4.10.0"
+animdl = ">=1.4.84"
+anitopy = ">=2.1.0"
+apscheduler = ">=3.10.0"
+cachetools = ">=5.3.0"
+certifi = ">=2024.0.0"
+pyaes = ">=1.6.1"
+pyasn1 = ">=0.5.0"
+pytz = ">=2024.1"
+rsa = ">=4.9"
+six = ">=1.16.0"
+tornado = ">=6.4"
+tzdata = ">=2024.1"
+tzlocal = ">=5.2"
+backports-zoneinfo = ">=0.2.1"
+httpx = ">=0.25.0"
+httpcore = ">=1.0.0"
+PyYAML = ">=6.0.1"
+lxml = ">=5.0.0"
+cssselect = ">=1.2.0"
+tqdm = ">=4.66.0"
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
