refactor: modernize bot/services workflow and caching
Switch to python-telegram-bot async API, introduce normalized series_key + deterministic download paths, improve MongoDB indexing/connection handling, and harden downloader/uploader scripts (including object_id parsing).

--- a/uploaderService/config/Example_agentConfig.json
+++ b/uploaderService/config/Example_agentConfig.json
@@ -2,6 +2,6 @@
     "entity": "entity",
     "api_id": "api_id",
     "api_hash": "api_hash",
+    "phone": "+1234567890",
     "bot_name": "bot_name"
 }
-    
